<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tranlucent_bg_v"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_white_20"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/fragment_tuvan_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@xml/tuvan_tab_bg"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/fragment_tuvan_tab1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bg_white_20"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/tuvantab1"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/list_background" />

            <TextView
                android:id="@+id/fragment_tuvan_tab2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/tuvantab2"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/list_background" />

            <TextView
                android:id="@+id/fragment_tuvan_tab3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/tuvantab3"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <include
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/tuvan_tab1"
                android:visibility="visible" />

            <include
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/tuvan_tab2"
                android:visibility="gone" />

            <include
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/tuvan_tab3"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>