<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tranlucent_bg_v"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/bg_white_20"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/bg_white_30"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/danhsachtruong_dialog_back"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="-5dp"
                android:background="@drawable/back_onclick"
                android:padding="14dp"
                android:src="@drawable/ic_arrow_back_unselected" />

            <TextView
                android:id="@+id/danhsachtruong_dialog_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title "
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bg_white_20"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/danhsachtruong_dialog_content_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="Title"
                android:textColor="@color/action_bar"
                android:textSize="16sp"
                android:textStyle="bold" />

            <WebView
                android:id="@+id/danhsachtruong_dialog_webView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/danhsachtruong_dialog_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="Address"
            android:textColor="@color/text_color"
            android:textSize="12sp" />
        <!-- Bottom -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:background="@xml/danhsachtruong_dialog_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/danhsachtruong_dialog_call"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp" >

                <ImageView
                    android:id="@+id/danhsachtruong_dialog_call_image"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/back_onclick"
                    android:src="@drawable/ic_call" />

                <TextView
                    android:id="@+id/danhsachtruong_dialog_callText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/goi"
                    android:textColor="@color/text_color"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- <View -->
            <!-- android:layout_width="2dp" -->
            <!-- android:layout_height="match_parent" -->
            <!-- android:background="@color/list_background" /> -->

            <LinearLayout
                android:id="@+id/danhsachtruong_dialog_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp" >

                <ImageView
                    android:id="@+id/danhsachtruong_dialog_email_image"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/back_onclick"
                    android:src="@drawable/ic_email" />

                <TextView
                    android:id="@+id/danhsachtruong_dialog_emailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/guimail"
                    android:textColor="@color/text_color"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- <View -->
            <!-- android:layout_width="2dp" -->
            <!-- android:layout_height="match_parent" -->
            <!-- android:background="@color/list_background" /> -->

            <LinearLayout
                android:id="@+id/danhsachtruong_dialog_website"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/danhsachtruong_dialog_website_image"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/back_onclick"
                    android:src="@drawable/ic_website" />

                <TextView
                    android:id="@+id/danhsachtruong_dialog_websiteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/truycapwebsite"
                    android:textColor="@color/text_color"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>